--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,8 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
 
 Justin Majetich <justinmajetich@gmail.com>
 
-Ehoneah Obed <ehoneahobed@gmail.com>
+Muhama Mark <muhamamark@gmail.com>
 
-BLAY MEWUBE JUSTICE MENSAH <PORTJUSTO1@GMAIL.COM>[TWITTER@JUSTICEMBLAY]
+
